Adiciona funcionalidades de negócio, segurança JWT/RBAC e carga inicial